# MrCogito

./: .cursorignore  .gitignore  CHANGELOG.md  README.md  concept_enc_dec.py  datasets_review.ipynb  model_sft.py  pyproject.toml  runpod_unsloth_ft.ipynb  tinyllama.ipynb  unsloth_ft.ipynb
.cursor/: settings.json
.cursor/agents/: experiment_remote_evaluator.md  reseracher.md
.cursor/rules/: ai-researcher.mdc  computing-environments-remote.mdc  computing-environments.mdc  concept-encoder-research.mdc  engineer-scribe.mdc  huggingface-models-details.mdc  local-environment.mdc  output-and-run-python.mdc  project-overview.mdc  remote-servers.mdc  windows-environment.mdc
agent_memory/: research_plan_v2_20260213.md
analysis/: check_model_health.py  concept_analysis.py  concept_analysis_notebook.ipynb  concept_encoder_parameter_analysis.py  evaluate_tokenizers_comprehensive.py  micro_model_exploration.py  run_concept_analysis.py
data/: data_collators.py
doc/: 1.reserch_notes.md  experiment_morphological_aware_tokenization.md  research_notes.md  reserach_notes.md
doc/MrCogito-research-docs/: concept_encoder_notes.md  evaluation_strategies.md
doc/docs_for_ai/: prompt_for_extraction.md  publication_extracts_multi_masking.md
doc/models_architectures/: encoders_model_architectures.md
docs/: concept_encoder_parameter_designer_guide.md
docs/1_Strategy_and_Plans/: active_todos.md  roadmap.md  vision_and_goals.md
docs/2_Experiments_Registry/: master_experiment_log.md
docs/3_Evaluations_and_Baselines/: canonical_baselines.md
docs/4_Research_Notes/: diffusion_diagnosis_20260226.md  mlm_perceiver_diagnosis_20260221.md
docs/5_Archive/: concept_reasoning_v1_experiment_plan.md  mining_mwt_experiment_notes.md
docs/MrCogito-research-docs/: evaluation_strategies.md
docs/debugging/: inspect_checkpoint.py  nccl_timeout_fix_2025-11-11.md
docs/experiment_ideas/: concept_encoder_training_protocol_v1.md  idea4_morphological_aware_tokenization.md  idea5_advanced_concept_decoding.md  ner_labels_for_mwt.md
docs/experiments_results/: encoders_glue_evaluation_baseline.md  full_glue_evaluation_20260205.md  glue_evaluation_concept_losses_20260219.md
evaluation/: evaluate_model_on_glue.py  evaluate_on_benchmark.py
models/: README.md
nn/: concept_encoder.py  concept_encoder_diffusion.py  concept_encoder_methods.py  concept_encoder_perceiver.py  concept_encoder_recursive.py  concept_encoder_recursive_mlm.py  concept_encoder_sim_matrix.py  concept_encoder_weighted.py  concept_losses.py  loss_manager.py
playground/: 1notes.md  analyze_trained_tok.py  bert_layer_tests.py  concept_layer_step_by_step.py  concept_layer_tests.py  cross_attention_concept_tokens.py  datacollators_playground.py  datasets_review.ipynb  evaluate_xlnet_on_glue.py  evaluation_playground.py  load_berts.py  load_datasets.py  load_llama32.py  load_pretrain_datasets.py  load_pythia_model.py  test_weighted_mlm.py  train_tokenizer_playground.py
scripts/: clean_tee.py  diagnose_cuda.sh  evaluate_concept_encoder_glue.ps1  evaluate_concept_encoder_glue.sh  evaluate_concept_encoder_paws.sh  evaluate_concept_encoder_sick.sh  evaluate_tokenizers.sh  setup_runpod.sh  sync_evaluation_reports.ps1  test_diffusion_local.ps1  test_tsdae_local.ps1  train_diffusion_multigpu.sh  train_mlm_multigpu_perceiver.sh  train_mlm_multigpu_weighted.sh  train_perceiver_minipile.sh  train_perceiver_mlm.ps1  train_perceiver_mlm_multigpu.sh  train_recursive_mlm.sh  train_tokenizer4concepts.sh  train_weighted_mlm.ps1  train_weighted_mlm_multigpu.sh  upload_model_to_hf.py  upload_model_to_hf.sh
tests/: test_concept_encoder_layer.py  test_conept_encoder_layer.py  test_data_collators.py  test_diffusion.py  test_loss_manager.py  test_mine_mwt.py  test_recursive_encoder.py  test_recursive_mlm.py  test_tsdae_collator.py  verify_dimension_inversion.py  verify_sparse_decoding.py
training/: concept_enc_dec.py  dataset_preprocess.py  evaluate_model_on_glue.py  mine_mwt.py  mlm_training.py  model_sft.py  train_diffusion.py  train_morfessor_en_morpheme.py  train_morfessor_models.py  train_tokenizer_custom.py  train_tsdae.py  utils_training.py
verification/: torch_test.py  verify_dimension_inversion.py  verify_perceiver.py  verify_sparse_decoding.py
(+46 files in other folders)
