[tool.poetry]
name = "mrcogito"
version = "0.1.0"
description = ""
authors = ["ksopyla <krzysztofsopyla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wheel= ">=0.42.0"
packaging = "^24.1"
torch = {version = "2.3.0+cu118", source = "torch118"}
xformers = {version = "0.0.26.post1+cu118", source = "torch118"}
trl = "<0.9.0"
peft = "<0.11.0"
protobuf= "<4.0.0"
transformers= ">=4.42.3"
datasets = ">=2.16.0"
accelerate = ">=0.26.1"
#sentencepiece= ">=0.2.0"
bitsandbytes = "^0.43.1"
flash-attn= "^2.6.1"
#unsloth = {git = "https://github.com/unslothai/unsloth.git" }
#unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["cu118-ampere-torch230"] }
tqdm = "^4.66.4"
wandb = "^0.17.4"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[[tool.poetry.source]]
name = "PyPi"
priority = "default"


# https://medium.com/decodingml/the-step-by-step-guide-on-how-to-install-pytorch-with-cuda-support-in-all-possible-ways-147b3f34085c
# [[tool.poetry.source]]
# name = "torch121"
# url = "https://download.pytorch.org/whl/cu121"
# priority = "supplemental"


[[tool.poetry.source]]
name = "torch118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"